--- a/app/src/main/res/drawable/animated_checkmark.xml
+++ b/app/src/main/res/drawable/animated_checkmark.xml
@@ -29,8 +29,8 @@
         </vector>
     </aapt:attr>
     
-    <!-- Circle animation -->
-    <target android:name="circle">
+    <!-- Circle animation - disabled since we handle scaling in Java -->
+    <!-- <target android:name="circle">
         <aapt:attr name="android:animation">
             <objectAnimator
                 android:duration="600"
@@ -39,14 +39,14 @@
                 android:valueTo="1"
                 android:interpolator="@android:interpolator/decelerate_cubic" />
         </aapt:attr>
-    </target>
+    </target> -->
     
-    <!-- Checkmark animation -->
+    <!-- Checkmark animation - remove start offset since circle scaling handles timing -->
     <target android:name="checkmark">
         <aapt:attr name="android:animation">
             <objectAnimator
                 android:duration="300"
-                android:startOffset="800"
+                android:startOffset="0"
                 android:propertyName="trimPathEnd"
                 android:valueFrom="0"
                 android:valueTo="1"
