--- a/app/src/main/res/layout/fragment_stake_unstake.xml
+++ b/app/src/main/res/layout/fragment_stake_unstake.xml
@@ -94,6 +94,7 @@
                 android:hint="0.0"
                 android:textColorHint="#999999"
                 android:inputType="numberDecimal"
+                android:imeOptions="actionDone"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
                 android:paddingTop="18dp"
@@ -205,6 +206,7 @@
                 android:hint="0.0"
                 android:textColorHint="#999999"
                 android:inputType="numberDecimal"
+                android:imeOptions="actionDone"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
                 android:paddingTop="18dp"
