--- a/app/src/main/res/layout/fragment_manage_lp.xml
+++ b/app/src/main/res/layout/fragment_manage_lp.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
@@ -70,3 +74,11 @@
     </LinearLayout>
 
 </ScrollView>
+
+<!-- Loading overlay using reusable component -->
+<com.example.earthwallet.ui.components.LoadingOverlay
+    android:id="@+id/loading_overlay"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
+
+</FrameLayout>
